--- a/DiwaliWishes/index.html
+++ b/DiwaliWishes/index.html
@@ -16,7 +16,7 @@
         <img class="jhalar" src="/images/jhalar.png" alt="jhalar">
         <div class="paragraph-and-audio-container">
             <p>
-                Hi, <span id="receiver"></span>
+                Hi <span id="receiver"></span>,
                 <br />
                 You mean the world to me...
                 So this Diwali,
